minor misalignment fixes

--- a/src/scss/pages.sass
+++ b/src/scss/pages.sass
@@ -16,7 +16,7 @@ main
   overflow-x: hidden
   scroll-behavior: smooth
   box-sizing: border-box
-  padding: 40px 80px 80px
+  padding: 30px 80px 80px
 
   display: flex
   flex-direction: column
