--- a/src/scss/portfolio.sass
+++ b/src/scss/portfolio.sass
@@ -18,7 +18,7 @@ main
 
   display: flex
   box-sizing: border-box
-  padding: 40px 80px
+  padding: 30px 80px
   flex-direction: column
   align-items: center
   gap: 80px
