--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -22,7 +22,7 @@ main
   display: flex
   box-sizing: border-box
   height: 100svh
-  padding: 40px 80px
+  padding: 30px 80px
   flex-direction: column
   justify-content: center
   align-items: center
